--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- App Titel -->
     <string name="app_name">Brutto-Netto-Rechner</string>
+
+    <!-- Formulartexte -->
+    <string name="txt_anweisung">Geben Sie einen Brutto oder Nettobetrag ein und lassen Sie sich die Umsatzsteuer errechnen:</string>
+    <string name="txt_netto">Netto</string>
+    <string name="txt_brutto">Brutto</string>
+    <string name="txt_nettobetrag">Nettobetrag:</string>
+    <string name="txt_umsatzsteuer">Umsatzsteuer:</string>
+    <string name="txt_bruttobetrag">Bruttobetrag:</string>
+    <string name="txt_berechnen">Berechnen</string>
+
+    <!-- Menüeintrag -->
+    <string name="mnu_ende">Beenden</string>
 </resources>
